force-app/main/default/objects/ssot__AdKeyword__dlm/fields/ssot__AdKeywordLabelList__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdKeywordLabelList__c</fullName>
    <label>Ad Keyword Labels</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdKeywordLabelList</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>