force-app/main/default/objects/ssot__AdKeyword__dlm/fields/ssot__AdKeywordStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdKeywordStatus__c</fullName>
    <label>Ad Keyword Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdKeywordStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>