force-app/main/default/objects/ssot__AdKeyword__dlm/fields/ssot__PrimaryAdKeywordCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAdKeywordCategoryName__c</fullName>
    <label>Primary Ad Keyword Category</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAdKeywordCategoryName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>