force-app/main/default/objects/ssot__AdKeyword__dlm/fields/ssot__QualityScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__QualityScoreNumber__c</fullName>
    <label>Quality Score</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QualityScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>