force-app/main/default/objects/ssot__AdKeyword__dlm/fields/ssot__SearchURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__SearchURL__c</fullName>
    <label>Search URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SearchURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>